--- a/applied-fp-course.cabal
+++ b/applied-fp-course.cabal
@@ -42,6 +42,17 @@ library
     Level05.Types.CommentText
     Level05.Types.Error
     Level05.Types.Topic
+    Level06.AppM
+    Level06.Conf
+    Level06.Conf.CommandLine
+    Level06.Conf.File
+    Level06.Core
+    Level06.DB
+    Level06.DB.Types
+    Level06.Types
+    Level06.Types.CommentText
+    Level06.Types.Error
+    Level06.Types.Topic
 
   ghc-options:
     -Wall -fno-warn-unused-binds -fno-warn-unused-do-bind
@@ -150,6 +161,15 @@ executable level04-exe
 
 executable level05-exe
   main-is:          Level05.hs
+  hs-source-dirs:   exe
+  build-depends:
+      applied-fp-course
+    , base
+
+  default-language: Haskell2010
+
+executable level06-exe
+  main-is:          Level06.hs
   hs-source-dirs:   exe
   build-depends:
       applied-fp-course
